# diann_script

./: .gitignore  Dockerfile  README.md  batch_create_lib.sh  batch_execute.sh  create_job.sh  create_jobs_PTM_library_free.sh  create_spec_lib.sh  diann.lsf  phosphorylation_lib.lsf  pyproject.toml  run_batch.sh  scripts.txt  test.lsf
diann_analysis/: create_job.py  merge.py  qc.ipynb
experiments/: test.lsf
